# plugin_design_template

./: .gitignore  CMakeLists.txt  README.md
include/: plugin_ctrl.h
plugin_1/: plugin_1.cpp
src/: main_prj.cpp  plugin_ctrl.cpp
